# AI-VIDEOCALLING-APP-

./: README.md
backend/: .env  main.py  pyproject.toml
smartvideocall/: desktop.ini  package-lock.json  package.json
smartvideocall/src/app/: globals.css  page.js
smartvideocall/src/app/components/: meeting-room.jsx  stream-provider.jsx  transcript.jsx
smartvideocall/src/app/hooks/: use-stream-clients.js
smartvideocall/src/app/meeting/[id]/: page.jsx
