[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "python-dotenv>=1.2.1",
    "vision-agents[deepgram,gemini,getstream]>=0.1.9",
    "websockets>=15.0.1",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
]